--- a/pcd_system_sudoku_solver.ipynb
+++ b/pcd_system_sudoku_solver.ipynb
@@ -5119,28 +5119,27 @@
         "\n",
         "* [1. Importing Libraries 💎](#1)\n",
         "* [2. Digits Classification](#2)\n",
-        "    * [Integration Data](#2.1)\n",
-        "    * [Splitting Test Train And Validation Sets](#2.1)\n",
-        "    * [Preprocessing Data](#2.1)\n",
-        "    * [Model Building And Training](#2.1)\n",
-        "* [3. Detecting Sudoku Puzzle](#3)\n",
-        "    * [Read an image from the dataset](#3.1)\n",
-        "    * [Preprocess the image](#3.2)\n",
-        "    * [Detecting Countour](#3.2)\n",
-        "    * [Transformation Perspective](#3.2)\n",
-        "    * [Split Cels](#3.2)\n",
-        "* [4 Solve Sudoku](#4)\n",
-        "* [5. Modelling](#5)\n",
-        "    * [5.1 General Model](#5.1)\n",
-        "    * [5.2 Model with Pretrained GloVe](#5.2)\n",
-        "    * [5.3 Model with Pretrained FastText](#5.3)\n",
-        "* [6.Comparison of various neural networks](#6)"
+        "    * [Integration Data](#3)\n",
+        "    * [Splitting Test Train And Validation Sets](#4)\n",
+        "    * [Preprocessing Data](#5)\n",
+        "    * [Model Building And Training](#6)\n",
+        "* [3. Detecting Sudoku Puzzle](#7)\n",
+        "    * [Read an image from the dataset](#8)\n",
+        "    * [Preprocess the image](#9)\n",
+        "    * [Detecting Countour](#10)\n",
+        "    * [Transformation Perspective](#11)\n",
+        "    * [Split Cels](#12)\n",
+        "* [4 Solving Sudoku](#13)\n",
+        "    * [Detecting Box Sudoku](#14)\n",
+        "    * [Classifying Digits](#15)\n",
+        "    * [Solve Sudoku](#16)\n"
       ]
     },
     {
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<a id=\"1\"></a>\n",
         "## Importing Libraries"
       ]
     },
@@ -5181,6 +5180,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<a id=\"2\"></a>\n",
         "## <p style=\"background-color:#006989; font-family:newtimeroman; font-size:250%; text-align:center; border-radius: 15px 50px;color:#F3F7EC\">Digits Classification</p>"
       ]
     },
@@ -5188,6 +5188,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
+        "<a id=\"3\"></a>\n",
         "**In this section:**\n",
         "\n",
         "* Integration Data\n",
@@ -5313,7 +5314,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"4\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">SPLITTING DATA</span>**"
       ]
     },
@@ -5351,7 +5352,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"5\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">PREPROCESSING DATA</span>**"
       ]
     },
@@ -5404,7 +5405,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"6\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">MODEL BUILDING AND TRAINING</span>**"
       ]
     },
@@ -5723,7 +5724,13 @@
     {
       "cell_type": "markdown",
       "metadata": {},
+      "source": []
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
       "source": [
+        "<a id=\"7\"></a>\n",
         "## <p style=\"background-color:#006989; font-family:newtimeroman; font-size:250%; text-align:center; border-radius: 15px 50px;color:#F3F7EC\">Reading Sudoku Puzzle</p>"
       ]
     },
@@ -5780,7 +5787,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"8\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">PREPROCESS IMAGE</span>**"
       ]
     },
@@ -5831,7 +5838,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"9\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">DETECTING CONTOUR</span>**"
       ]
     },
@@ -5868,7 +5875,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"10\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">Transformation Perspective</span>**"
       ]
     },
@@ -5941,7 +5948,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"11\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">SPLIT CELS</span>**"
       ]
     },
@@ -6030,6 +6037,7 @@
         "id": "CO-Rw7ICiJ8E"
       },
       "source": [
+        "<a id=\"12\"></a>\n",
         "## <p style=\"background-color:#006989; font-family:newtimeroman; font-size:250%; text-align:center; border-radius: 15px 50px;color:#F3F7EC\">Solving Sudoku</p>"
       ]
     },
@@ -6092,7 +6100,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"13\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">DETECTING BOX SUDOKU</span>**"
       ]
     },
@@ -6203,7 +6211,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"14\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">CLASSIFYING SUDOKU DIGITS</span>**"
       ]
     },
@@ -6398,7 +6406,7 @@
       "cell_type": "markdown",
       "metadata": {},
       "source": [
-        "<a id=\"3\"></a>\n",
+        "<a id=\"15\"></a>\n",
         "# **<span style=\"color:#F3F7EC;\">SOLVE SUDOKU</span>**"
       ]
     },
