--- a/pcd_system_sudoku_solver.ipynb
+++ b/pcd_system_sudoku_solver.ipynb
@@ -5191,7 +5191,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
         "id": "w6gw-SB36_Us"
       },
@@ -5769,14 +5769,14 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 12,
+      "execution_count": 5,
       "metadata": {
         "id": "5Yip4tbS8R72"
       },
       "outputs": [],
       "source": [
         "# Load the saved model\n",
-        "model = load_model('my_model.h5')"
+        "model = load_model('models/my_model.h5')"
       ]
     },
     {
